Fixed the twitter alignment mishap

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,28 +1,15 @@
 html, body{
-	/*background-color: #F5FAFA;*/
+
 	font-family: Georgia;
-	/*background-color: #3f4c6b;*/
+
 }
 
 body{
 	border-radius: 15px;
-	/*background-color: #3f4c6b;*/
 	background: url('images/stardust.png');
 }
 
 #header{
-	/*background-color: #ACD1E9;*/
-
-	/*
-	background: -moz-linear-gradient(-45deg,  rgba(0,0,0,0.65) 0%, rgba(0,0,0,0.65) 50%, rgba(0,0,0,0) 100%);
-	background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(0,0,0,0.65)), color-stop(50%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0)));
-	background: -webkit-linear-gradient(-45deg,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.65) 50%,rgba(0,0,0,0) 100%);  
-	background: -o-linear-gradient(-45deg,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.65) 50%,rgba(0,0,0,0) 100%); 
-	background: -ms-linear-gradient(-45deg,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.65) 50%,rgba(0,0,0,0) 100%); 
-	background: linear-gradient(135deg,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.65) 50%,rgba(0,0,0,0) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=1 ); 
-	*/
-	
 	width: 100%;
 	height: 10%;
 	margin-bottom: .5%;
@@ -35,28 +22,15 @@ body{
 	left: 45px;
 	color: #FFFFFF;
 	border: black;
-	/*text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;*/
 }
-
-/*
-#navBar{
-	height: 150%;
-	width: 17%;
-	background-color: #FF6600;
-	margin-right: 3%;
-	color: #FFFFFF;
-	text-align: center;
-}
-*/
 
 
 .evenSetTextArea, .oddSetTextArea{
 	height: 50%;
-	/*width: 82.5%;*/
 	width: 60%;
 	background-color: #F5FAFA;
 	color: #000000;
-	margin-right: 2%;
+	/*margin-right: 2%;*/
 	overflow:auto;
 }
 
@@ -66,6 +40,8 @@ body{
 	background-color: #333333;
 	margin-left: 63%;
 	border-radius: 15px;
+	right: 0;
+	top: 0;
 }
 
 
@@ -74,26 +50,21 @@ body{
 	text-align: center;
 }
 
-.twitter-timeline{
-	margin-left: 1%;
-	margin-top: 1%;
-}
 
 
-.evenSetTextArea, .oddSetTextArea p{
-	margin-left: 9%;
+.textAreaParagraph{
+	margin-left: 3%;
 	padding-left: 1%;
-	padding-right: 1%;
-	/*text-indent: 50px;*/
 }
 
-.evenSetTextArea, .oddSetTextArea h1{
-	margin-left: 7%;
+.textAreaHeading{
+	margin-left: 3%;
 }
 
-.evenSetTextArea, .oddSetTextArea h4{
-	margin-left: 9%;
+.textAreaBigHeading{
+	margin-left: 1%;
 }
+
 
 #navbar, .evenSetTextArea, .oddSetTextArea{
 	float: left;
